# sys-design-playground

./: .dockerignore  .gitignore  Cargo.toml  README.md  clorinde.toml  requirements.txt
.cargo/: config.toml
app-web/: README.md  package-lock.json  package.json  vite.config.ts
app-web/src/: App.vue
assets/datasets/: .gitignore
clorinde/src/: queries.rs  types.rs
clorinde/src/queries/: osm_roads_queries.rs
crates/backend/: Cargo.toml
crates/backend/assets/: .gitignore
crates/backend/src/: lib.rs
crates/backend/src/earth_tiling_service/: image_sources.rs  main.rs  mod.rs
crates/backend_model/: Cargo.toml
crates/backend_model/src/: earth_tiling_service_model.rs  lib.rs
crates/generated_queries/: Cargo.toml
crates/generated_queries/src/: queries.rs  types.rs
crates/generated_queries/src/queries/: osm_queries.rs  osm_roads_queries.rs
crates/geo_app/: Cargo.toml  clorinde.toml
crates/geo_app/assets/: .gitignore
crates/geo_app/assets/datasets/: .gitignore
crates/geo_app/queries/: osm_queries.sql
crates/geo_app/src/app/: main.rs
crates/geo_app/src/app/common/: settings.rs
crates/geo_app/src/app/geo/: despawn_indicator.rs  element_requests.rs  geometry_vello.rs  map.rs
crates/geo_app/src/app/geo/elements_grid/: buildings.rs  landuse.rs  manager.rs  water.rs
crates/geo_app/src/app/geo/grid/: manager.rs
crates/geo_app/src/app/geo/tiling/: manager.rs  mod.rs  requests.rs  sprite.rs
crates/geo_app/src/app/utils/: commands.rs  debug.rs  mod.rs  synced_cam.rs  vello_ext.rs
crates/geo_app/src/geo/: constants.rs  coords.rs
crates/jlh_maps_app/: Cargo.toml  justfile
crates/jlh_maps_app/.cargo/: config.toml
crates/jlh_maps_app/assets/shaders/: building_pbr.fragment.wgsl  transparent_overwrite.fragment.wgsl  water_gradient.fragment.wgsl
crates/jlh_maps_app/src/app/: main.rs  manual_winit_runner.rs  mod.rs  offscreen_window_handle.rs
crates/jlh_maps_app/src/app/common/: debug_gizmos.rs  editor.rs  external_render_target.rs  materials.rs  mod.rs  settings.rs
crates/jlh_maps_app/src/app/editor/: mod.rs
crates/jlh_maps_app/src/app/instance_management/: commands.rs  instance.rs  interop.rs  mod.rs
crates/jlh_maps_app/src/app/map/: buildings.rs  camera.rs  core.rs  depth_encoded_material.wgsl  feature_plane_mesh.rs  integration.rs  interop.rs  mod.rs  terrain.rs  transform.rs  waters.rs
crates/jlh_maps_app/src/app/maplibre_gl_js/: integration.rs  interop.rs  mod.rs  types.rs
crates/jlh_maps_app/src/app/maplibre_gl_js/utils/: dem_data.rs  mercator_coordinate.rs  mod.rs  terrain.rs  tile.rs
crates/jlh_maps_app/src/utils/: debug.rs  edge_distance.rs  mercator_coordinate.rs  mod.rs  terrain.rs  terrain_mesh.rs
crates/jlh_maps_app/tests/: edge_distance_bench.rs
crates/jlh_maps_core_service/: Cargo.toml  justfile
crates/jlh_maps_core_service/src/model/: mod.rs
crates/jlh_maps_core_service/src/model/postgres_osm/: mod.rs  prelude.rs  unitable.rs
crates/jlh_maps_frontend/: Cargo.toml  justfile
crates/jlh_maps_frontend/.cargo/: config.toml
crates/jlh_maps_frontend/src/: lib.rs
crates/jlh_maps_frontend/tests/: edge_distance_bench.rs
crates/jlh_maps_frontend/tests/test-data/: sample-edge-tiles.json
crates/osm/: Cargo.toml
crates/osm/src/: lib.rs
crates/osm/src/model/: building.rs  landuse.rs  mod.rs  parser.rs  road.rs  water.rs
crates/osm/src/postgres_integration/: client.rs  model.rs
crates/sat_ingest/: Cargo.toml
crates/sat_ingest/src/: lib.rs  sen2.rs
crates/utilities/: Cargo.toml
crates/utilities/src/: distributed_mapped_image.rs  image_utils.rs  lib.rs  queued_reading.rs  sen2.rs  tiled_imaging.rs
crates/utilities/src/glam_ext/: bounding.rs  geo.rs  mod.rs  sub_division.rs
crates/utilities/test-data/: linear_tiling_res.tiff  tile_00.tiff  tile_01.tiff  tile_02.tiff  tile_12.tiff  tiling_res.tiff
crates/utilities/test-data/distributed_image/dir-a/: tile_bl.png.meta.json  tile_tl.png.meta.json  tile_tr.png.meta.json
crates/utilities/test-data/distributed_image/dir-b/: tile_bl.png.meta.json  tile_br.png.meta.json  tile_tr.png.meta.json
infra/: README.md  compose.jobs.yaml  compose.yaml
infra/core_service/: Dockerfile
infra/geo/: README.md  compose.yaml
infra/geo/init/: init.sql
infra/geo/postgres/init/: init.sql
infra/geo/postgres_osm/: postgres.conf
infra/geo/postgres_osm/osm2pgsql/: style.lua
infra/geo/raster_tile_json_server/: nginx.conf
infra/geo/tiling_backend/: Dockerfile
infra/geo/valhalla/: .gitignore
infra/postgres_osm/: Dockerfile
infra/postgres_osm/init/: init.sql
queries/: osm_queries.sql  osm_roads_queries.sql
src/: lib.rs  utils.rs
src/app/: boundaries.rs  geo_map.rs  main.rs  mod.rs  settings.rs
src/app/common/: settings.rs
src/app/editor/: mod.rs
src/app/geo/: boundaries.rs  despawn_indicator.rs  element_requests.rs  elements.rs  elements_grid.rs  geometry.rs  geometry_vello.rs  locations.rs  map.rs  mod.rs  osm.rs  road_elements.rs  tile_fetcher.rs  tile_requests.rs  tiling.rs  zoom_visibility.rs
src/app/geo/elements/: manager.rs  mod.rs
src/app/geo/elements_grid/: buildings.rs  landuse.rs  manager.rs  mod.rs  roads.rs  water.rs
src/app/geo/grid/: manager.rs  mod.rs
src/app/geo/tiling/: manager.rs  mod.rs  requests.rs  sprite.rs
src/app/js/: interop.rs
src/app/utils/: async_requests.rs  big_space_ext.rs  commands.rs  debug.rs  mod.rs  network_asset_server.rs  synced_cam.rs  vello_ext.rs
src/geo/: constants.rs  coords.rs  mod.rs  sub_division.rs
src/geo/locations/: mod.rs
src/geo/osm/: client.rs  mod.rs
src/geo/osm/layered/model/: mod.rs  road.rs
src/geo/tiling/: gibs.rs  image_sources.rs  mod.rs
src/utils/: mod.rs
src/utils/glam_ext/: bounding.rs
