[package]
name = "jlh_sys_design_playground"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = ["crates/backend", "crates/backend_model","crates/generated_queries", "crates/utilities"]

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "app"
path = "src/bin/app.rs"

[[bin]]
name = "process_osm_shapefile_into_infra"
path = "src/bin/process_osm_shapefile_into_infra.rs"

[[bin]]
name = "fetch_osm_shapefiles"
path = "src/bin/fetch_osm_shapefiles.rs"

[[bin]]
name = "sat_ingest"
path = "src/bin/sat_ingest.rs"

[features]
default = []
debug = ["bevy/debug", "bevy/bevy_debug_stepping"]

[dependencies]
backend_model = { path = "./crates/backend_model" }
generated_queries = { path = "./crates/generated_queries" }
utilities = { path = "./crates/utilities", features = ["bevy-reflect"] }
bevy = { version = "0.18.1", features = ["http", "https", "jpeg"] }
bevy_pancam = { version = "0.20.0", features = ["bevy_egui_0_39"] }
bevy_prototype_lyon = "0.16.0"
geojson = "1.0.0"
tokio = { version = "1.50.0", features = ["sync", "rt", "rt-multi-thread", "macros", "fs", "time", "signal"] }
bevy_vector_shapes = "0.12.0"
itertools = "0.14.0"
reqwest = { version = "0.13.2", features = ["json", "form"] }
image = "0.25.10"
tiff = "0.9"
rayon = "1"
futures = "0.3.32"
bevy-tokio-tasks = "0.18.0"
smallvec = "1.15.1"
thiserror = "2.0.18"
hex = "0.4.3"
serde_json = "1.0.149"
ratelimit = "1.0.0"
tokio-postgres = "0.7.17"
priority-queue = "2.7.0"
bevy-inspector-egui = "0.36.0"
glam = "0.30.10"
dotenvy = "0.15.7"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
big_space = "0.12.0"
shapefile = "0.8.0"
strum = { version = "0.28.0", features = ["derive"] }
postgis = "0.9.0"
regex = "1.12.3"
zip = "8.5.1"
geoconvert = "1.0.2"
crossbeam = "0.8.4"

[profile.release]
opt-level = 3
lto = "fat"
#debug = 2
#split-debuginfo = "packed"

#opt-level = 3
#debug = 2
#split-debuginfo = "packed"
#lto = "thin"   # NOT fat
#codegen-units = 1

[profile.dev]
opt-level = 0
incremental = true

[profile.dev.package."*"]
opt-level = 3

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
rev = "296b892"
dependencies = ["sqlite3"]
