[workspace]
resolver = "3"
members = ["crates/jlh_maps_app","crates/jlh_maps_core_service", "crates/sat_ingest", "crates/utilities"]

[profile.release]
opt-level = 3
lto = "fat"

#opt-level = 3
#debug = 2
#split-debuginfo = "packed"
#lto = "thin"

[profile.dev]
opt-level = 0
incremental = true

[profile.dev.package."*"]
opt-level = 3
