[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "run_earth_tiling_service"
path = "src/bin/run_earth_tiling_service.rs"

[dependencies]
backend_model = { path = "../backend_model" }
actix-web = "4.13.0"
serde = { version = "1.0.228", features = ["derive"] }
actix-files = "0.6.10"
smallvec = { version = "1.15.1", features = ["serde"] }
hex = "0.4.3"
itertools = "0.14.0"
reqwest = { version = "0.13.2", features = ["json", "form"] }
image = "0.25.10"
tokio = { version = "1.50.0", features = ["rt", "rt-multi-thread", "macros", "fs"] }
thiserror = "2.0.18"
glam = "0.30.10"
serde_json = "1.0"
utilities = { path = "../utilities" }
dotenvy = "0.15.7"
serde_repr = "0.1.20"
strum = { version = "0.28.0", features = ["derive"] }
tracing = "0.1"
cached = { version = "0.59.0", features = ["async", "proc_macro"] }
tracing-subscriber = "0.3.23"
