[package]
name = "jlh_maps_app"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = "0.18.1"
bevy_winit = "0.18.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = "1.15.1"
wasm-bindgen = "0.2.118"
console_error_panic_hook = "0.1.7"
egui = "0.33.3"
egui_dock = { git = "https://github.com/Avarel/egui_dock", branch = "egui_0.33" }
bevy-inspector-egui = "0.36.0"