[package]
name = "jlh_maps_app"
version = "0.1.0"
edition = "2024"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O1"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = { version = "0.18.1", features = ["webgpu"] }
bevy_winit = "0.18.1"
big_space = "0.12.0"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1"
smallvec = "1.15.1"
wasm-bindgen = "0.2.118"
web-sys = { version = "0.3.95", features = ["OffscreenCanvas", "WebGlFramebuffer"] }
console_error_panic_hook = "0.1.7"
egui = "0.33.3"
egui_dock = { git = "https://github.com/Avarel/egui_dock", branch = "egui_0.33" }
bevy-inspector-egui = "0.36.0"
tracing = "0.1.44"
geojson = "0.24.2"
earcutr = "0.4.3"
anyhow = "1.0.102"
raw-window-handle = "0.6.2"
itertools = "0.14.0"
