[package]
name = "osm"
version = "0.1.0"
edition = "2024"

[features]
bevy-reflect = ["bevy_reflect"]

[dependencies]
strum = { version = "0.28.0", features = ["derive"] }
glam = { version = "0.30" }
bevy_reflect = { version = "0.18.1", features = ["glam"], optional = true }
utilities = { path = "../utilities" }
generated_queries = { path = "../generated_queries" }
postgis = "0.9.0"
geojson = "1.0.0"
thiserror = "2.0.18"
geo-types = { version = "0.7.19" }
shapefile = { version = "0.8.0", features = ["geo-types", "geo-traits"] }
tokio = "1.52.1"
tracing = "0.1.44"
reqwest = { version = "0.13.2", features = ["json"] }
futures = "0.3.32"
