[package]
name = "utilities"
version = "0.1.0"
edition = "2024"

[features]
bevy-reflect = ["bevy_reflect"]

[dependencies]
glam = { version = "0.30", features = ["serde"] }
bevy_reflect = { version = "0.18.1", features = ["glam"], optional = true }
itertools = "0.14.0"
smallvec = "1.15.1"
image = "0.25.10"
anyhow = "1.0.102"
rstar = "0.12"
serde_json = "1"
serde = { version = "1.0.228", features = ["derive"] }
rayon = "1.11.0"
